--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </style>
 </head>
 <body>
-    <script type="module" src="main.js"></script>
+    <script src="./dist/bundle.js"></script>
 </body>
 </html>
