--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Conway's Game of Life</title><style>body {
             margin: 0;
-        }</style></head><body><script src="./dist/bundle.js"></script><script defer="defer" src="bundle.js"></script></body></html>
+        }</style></head><body><script defer="defer" src="bundle.js"></script></body></html>
